fixed navbar, elements at least visible now. couple scoring fixes

--- a/BowlingCoreMVC/wwwroot/css/site.css
+++ b/BowlingCoreMVC/wwwroot/css/site.css
@@ -35,7 +35,11 @@
 }
 
 
-
+/* Example Highlight */
+.bd-highlight {
+    background-color: rgba(86, 61, 124, .15);
+    border: 1px solid rgba(86, 61, 124, .15);
+}
 
 /* custom */
 
